--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -1,10 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Bible</string>
-  <!--Startup & Help-->
-  <string name="splash_top_text">
-\n\"І сказаў Бог: хай будзе сьвятло. І сталася сьвятло.\"\nБыцьцё 1:3</string>
-  <string name="help_text">Націсьніце кнопку МЕНЮ для дзеяньняў.\n\nПерайсьці ў наступны ці папярэдні раздзел можна з дапамогаю трэк-бола, D-пэда ці рухамі пальцаў па экране.</string>
+  <!--Old long help text. This will be removed later.-->
   <string name="help_text_long"><b>Навігацыя</b>\nПераход да наступнага ці папярэдняга раздзелу з дапамогаю трэкбола, D-пэда ці рухаў пальцамі па экране.
 \nПадвойны тап уключае/выключае Поўнаэкранны рэжым.
 \n\n<b>Меню</b>
@@ -18,6 +15,10 @@
 \nПрацягла націсьніце ў рэжыме чытаньня Бібліі, каб адкрыць кантэкстнае меню для дзеяньняў з бягучым вершам.
 \nПрацягла націсьніце на дакумант ў рэжыме выбару дакумантаў, каб выдаліць ці пабачыць інфармацыю.
 \nПрацягла націсьніце кнопку Назад, каб адкрыць гісторыю прагляду.</string>
+  <!--Startup & Help-->
+  <string name="splash_top_text">
+\n\"І сказаў Бог: хай будзе сьвятло. І сталася сьвятло.\"\nБыцьцё 1:3</string>
+  <string name="help_text">Націсьніце кнопку МЕНЮ для дзеяньняў.\n\nПерайсьці ў наступны ці папярэдні раздзел можна з дапамогаю трэк-бола, D-пэда ці рухамі пальцаў па экране.</string>
   <string name="version_text">Вэрсія %s</string>
   <string name="no_sdcard_error">Калі ласка, ўстаўце SD картку і перазапусьціце And Bible.</string>
   <!--Main menu-->
