--- a/app/src/main/res/values-he/strings.xml
+++ b/app/src/main/res/values-he/strings.xml
@@ -1,10 +1,11 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Bible</string>
+  <!--Old long help text. This will be removed later.-->
+  <string name="help_text_long"><b>דפדוף</b>\nמעבר לפרק הבא או הקודם מתבצע ע\"י החלקת האצבע לרוחב המסך, או ע\"י גלגלת המכשיר.\nלחיצה כפולה תעביר למצב של מסך מלא.\n\n<b>תפריט</b>\nלחץ על כפתור התפריט לאפשרויות נוספות \nכדי להוריד טקסטים (תנ\"כים) נוספים הכנס לתפריט --&gt; ניהול --&gt; הורדת טקסטים\n\n<b>הקראה בקול</b>\nלחץ \"הקראה\" כדי להתחיל או להפסיק הקראה בקול\n\n<b>הערה אישית</b>\nניתן להוסיף הערות ע\"י \"הערה אישית\" בתפריט ההקשר של הפסוק. לרשימת ההערות האישיות ניתן לגשת דרך התפריט הראשי\n\n<b>סימניות</b>\nניתן להוסיף סימניות מתפריט ההקשר. לניהול הסימניות ניתן להגיע באמצעות התפריט. ניתן גם להוסיף תוויות לסימניות.\n\n<b>חיפוש</b>\nבחיפוש ניתן להשתמש בתווים מיוחדים כמו *, ?, AND, OR, NOT (חפש \"Apache Lucene - Query Parser Syntax\" לפרטים נוספים)\n\n<b>תפריטי הקשר</b>\nלחיצה ארוכה על פסוק, תפתח תפריט ובו אפשרויות נוספות לגבי הפסוק.\nלחיצה ארוכה על טקסט תציג אפשרות למידע או למחיקתו.\nלחיצה ארוכה על לחצן ה\"חזור\" במכשיר תפתח את רשימת ההיסטוריה\n</string>
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"ויאמר אלוהים, \'יהי אור,\' ויהי אור.\"\nבראשית א\' 3</string>
   <string name="help_text">לחץ על כפתור התפריט לאפשרויות נוספות\n\nמעבר לפרק הבא או הקודם מתבצע ע\"י החלקת האצבע לרוחב המסך</string>
-  <string name="help_text_long"><b>דפדוף</b>\nמעבר לפרק הבא או הקודם מתבצע ע\"י החלקת האצבע לרוחב המסך, או ע\"י גלגלת המכשיר.\nלחיצה כפולה תעביר למצב של מסך מלא.\n\n<b>תפריט</b>\nלחץ על כפתור התפריט לאפשרויות נוספות \nכדי להוריד טקסטים (תנ\"כים) נוספים הכנס לתפריט --&gt; ניהול --&gt; הורדת טקסטים\n\n<b>הקראה בקול</b>\nלחץ \"הקראה\" כדי להתחיל או להפסיק הקראה בקול\n\n<b>הערה אישית</b>\nניתן להוסיף הערות ע\"י \"הערה אישית\" בתפריט ההקשר של הפסוק. לרשימת ההערות האישיות ניתן לגשת דרך התפריט הראשי\n\n<b>סימניות</b>\nניתן להוסיף סימניות מתפריט ההקשר. לניהול הסימניות ניתן להגיע באמצעות התפריט. ניתן גם להוסיף תוויות לסימניות.\n\n<b>חיפוש</b>\nבחיפוש ניתן להשתמש בתווים מיוחדים כמו *, ?, AND, OR, NOT (חפש \"Apache Lucene - Query Parser Syntax\" לפרטים נוספים)\n\n<b>תפריטי הקשר</b>\nלחיצה ארוכה על פסוק, תפתח תפריט ובו אפשרויות נוספות לגבי הפסוק.\nלחיצה ארוכה על טקסט תציג אפשרות למידע או למחיקתו.\nלחיצה ארוכה על לחצן ה\"חזור\" במכשיר תפתח את רשימת ההיסטוריה\n</string>
   <string name="version_text">גרסה %s</string>
   <string name="no_sdcard_error">אנא הכנס כרטיס זכרון, והפעל מחדש את התוכנה.</string>
   <!--Main menu-->
