--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -1,10 +1,11 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Piibel</string>
+  <!--Old long help text. This will be removed later.-->
+  <string name="help_text_long"><b>Navigeerimine</b>\nMine järgmisele või eelmisele peatükkidele kasutades juhtkuuli, noole nuppe või viibates ekraanil sõrmega\n \nTopeltvajutus lülitav sisse/välja täisekraani vaate.\n \n\n<b>Menüü</b>\n \nVajuta tegevuste jaoks MENÜÜ nuppu\n \n\nRohkemate dokumentide allalaadimiseks vajuta Menüü/Lae dokumente alla\n \n\n<b>Kõne</b>\nVajuta Loe ette, et näha lugemise alustamise või lõpetamise dialoogi\n \n\n<b>Minu märkmed</b>\nMärkmeid võib lisada läbi Minu märkmete menüü või salmi kontekstimenüüst. Olemasolevaid märkmetele saab ligi läbi peamenüü.\n \n\n<b>Järjehoidjad</b>\nJärjehoidjaid saab lisada läbi salmi kontekstimenüü. Järjehoidjate haldajale saab ligi läbi peamenüü. Järjehoidjate haldaja kontekstimenüü võimaldab järjehoidjaid grupeerida kasutades silte.\n \n\n<b>Otsi</b>\nOtsingus võivad olla ka erimärgid nagu *, ?, AND, OR, NOT (vaata lisainfot \"Apache Lucene - Query Parser Syntax\")\n \n\n<b>Kontektimenüüd</b>\n \nPikk vajutus Piibli vaates avab kontekstimenüü konkreetse salmiga seotud tegevustega.\n \nPikk vajutus dokumendil, et kustutada või vaadata selle infot.\n \nPikk vajutus tagasi nupul viib ajaloo nimekirja</string>
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Ja Jumal ütles: \'Saagu valgus\' ja valgus sai.\"\n1. Moosese 1:3</string>
   <string name="help_text">Vajuta tegevuste jaoks MENÜÜ nuppu\n\nMine järgmisele või eelmisele peatükkidele kasutades juhtkuuli, noole nuppe või viibates ekraanil sõrmega</string>
-  <string name="help_text_long"><b>Navigeerimine</b>\nMine järgmisele või eelmisele peatükkidele kasutades juhtkuuli, noole nuppe või viibates ekraanil sõrmega\n \nTopeltvajutus lülitav sisse/välja täisekraani vaate.\n \n\n<b>Menüü</b>\n \nVajuta tegevuste jaoks MENÜÜ nuppu\n \n\nRohkemate dokumentide allalaadimiseks vajuta Menüü/Lae dokumente alla\n \n\n<b>Kõne</b>\nVajuta Loe ette, et näha lugemise alustamise või lõpetamise dialoogi\n \n\n<b>Minu märkmed</b>\nMärkmeid võib lisada läbi Minu märkmete menüü või salmi kontekstimenüüst. Olemasolevaid märkmetele saab ligi läbi peamenüü.\n \n\n<b>Järjehoidjad</b>\nJärjehoidjaid saab lisada läbi salmi kontekstimenüü. Järjehoidjate haldajale saab ligi läbi peamenüü. Järjehoidjate haldaja kontekstimenüü võimaldab järjehoidjaid grupeerida kasutades silte.\n \n\n<b>Otsi</b>\nOtsingus võivad olla ka erimärgid nagu *, ?, AND, OR, NOT (vaata lisainfot \"Apache Lucene - Query Parser Syntax\")\n \n\n<b>Kontektimenüüd</b>\n \nPikk vajutus Piibli vaates avab kontekstimenüü konkreetse salmiga seotud tegevustega.\n \nPikk vajutus dokumendil, et kustutada või vaadata selle infot.\n \nPikk vajutus tagasi nupul viib ajaloo nimekirja</string>
   <string name="version_text">Versioon %s</string>
   <string name="no_sdcard_error">Palun sisesta SD-kaart ja käivita AND Bible uuesti.</string>
   <!--Main menu-->
@@ -82,6 +83,8 @@
   <string name="prefs_text_size_title">Teksti suurus</string>
   <string name="prefs_text_size_summary">Näe rohkem ja selgemalt</string>
   <string name="prefs_text_size_sample_text">Näidistekst</string>
+  <string name="prefs_screen_keep_on_title">Hoia ekraan sees</string>
+  <string name="prefs_screen_keep_on_summary">Väldi ekraani kinni minemist selle rakenduse kasutamise ajal</string>
   <string name="x_minutes">%d minutit</string>
   <string name="prefs_interface_locale_title">Rakenduse keel</string>
   <string name="prefs_interface_locale_summary">Vali rakenduse keel</string>
@@ -96,6 +99,8 @@
   <string name="prefs_split_mode_automatic">Automaatne</string>
   <string name="prefs_split_mode_summary">Kuidas jagada mitut ekraani akende paigutuses?</string>
   <string name="prefs_split_mode_title">Jagatud akna režiim</string>
+  <string name="prefs_request_sdcard_permission_title">Käsitsi paigaldatud dokumendid on olemas</string>
+  <string name="prefs_request_sdcard_permission_summary">Luba mälukaardilt käsitsi paigaldatud jsword dokumentide kasutamist</string>
   <!--Window-->
   <string name="window">Aken</string>
   <string name="windowClose">Sulge</string>
@@ -220,17 +225,84 @@
   <string name="speak_queue">Järjekord</string>
   <string name="speak_repeat">Korda</string>
   <!--Speak - Bible-->
+  <string name="speak_speed_title">Kõnelemise kiirus</string>
+  <string name="speak_and_play_earcons_title">Kõnele ja teavita (nt. peatüki vahetumisest)</string>
+  <string name="playback_settings_title">Esitamise seaded</string>
+  <string name="speak_settings_title">Üldised kõne seaded</string>
+  <string name="speak_bookmarking_settings_title">Järjehoidjate seaded</string>
+  <string name="speak_bookmarks_menu_title">Kuula alates järjehoidjast</string>
+  <string name="speak_advanced_settings">Lisaseaded</string>
+  <string name="speak_sleep_timer_title">Unetaimer</string>
+  <string name="speak_no_books_available">Pole ühtegi raamatut, millest lugeda</string>
+  <string name="conf_speak_auto_bookmark">Automaatne järjehoidjate lisamine</string>
+  <string name="conf_save_playback_settings_to_bookmarks">Salvesta esitamise järjehoidjate seaded</string>
+  <string name="conf_replace_divinename">Kasuta jumala nime Jehoova</string>
+  <string name="conf_change_chapter">Peatüki muudatused</string>
+  <string name="conf_change_title">Pealkirjad</string>
+  <string name="conf_speak_footnotes">Allmärkused</string>
+  <string name="conf_speak_sleep_timer">Määra unetaimer</string>
+  <string name="sleep_timer_title">Unetaimer minutites</string>
+  <string name="sleep_timer_set">Määra unetaimer. Taimer on määratud %d minuti peale</string>
+  <string name="sleep_timer_started">Unetaimer on käivitatud - %d minutit</string>
+  <string name="sleep_timer_active_at">Unetaimer: %s minutit järgi.</string>
+  <string name="speak_next">Järgmine</string>
+  <string name="speak_previous">Eelmine</string>
+  <string name="widget_toggle_sleep_timer">Unetaimeri lülitamine</string>
+  <string name="widget_bookmark_helptext">Kõnelemise järjehoidjate otsetee nupud ilmuvad siia.</string>
+  <string name="speak_status_stopped">peatatud</string>
+  <string name="speak_bookmark_help">Kõnelemise järjehoidjate abiinfo</string>
+  <string name="speak_help_auto_bookmark">
+        Kõnelemise järjehoidja lisatakse automaatselt kui rääkimise funktsioon pannakse pausile või peatatakse.
+        Automaatselt loodud järjehoidjatele lisatakse eriline silt, mis näitab, et tegu on seda tüüpi järjehoidjaga.
+        Kui kõnefunktsioon käivitatakse olemasolevast järjehoidjast, siis liigutatakse seda järjehoidjat edasi salmile, milles sa
+        järgmine kord peatud või pausi teed. Liigutatakse ainult kõnelemise funktsiooni järjehoidjaid.
+        Teisi järjehoidjaid ei puututa.
+    </string>
+  <string name="speak_help_playback_settings">
+        Esitamise seaded (Kõnefunktsiooni \"Esitamise seadete\" all)
+        salvestatakse kõnelemise järjehoidjatesse, kui see seade on valitud.
+        Kui sa jätkad kuulamist kõnelemise järjehoidjast,
+        siis laaditakse esitamise seaded järjehoidjast.
+    </string>
+  <string name="speak_help_playback_settings_example">
+        Kui sa näiteks kuulad 1. Moosese raamatut ja kirja Roomlastele ning
+        soovid kuulata 1. Moosese raamatut kiiresti ilma peatüki vahetuste teavitusteta,
+        aga Roomlaste kirja kuulad aeglasemalt koos teavitustega peatüki vahetumisel, siis
+        saad nende raamatute jaoks salvestada erinevad esitamise seaded,
+        kui need salvestatakse vastavate järjehoidjatena.
+    </string>
   <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
          if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
 
          Please note that this is not translation but you need to think about what words need to be replaced
          in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
          in speak settings.-->
+  <string-array name="speak_divinename_original">
+    <item>Issand</item>
+    <item>Jumal</item>
+    <item></item>
+    <item></item>
+    <item></item>
+  </string-array>
   <!--List of (max 5) words that we will replace those words listed in divinename_original.
 
          Please note that this is not translation but you need to think about what words need to be replaced
          in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
          in speak settings.-->
+  <string-array name="speak_divinename_replace">
+    <item>Jehoova</item>
+    <item>Jehoova</item>
+    <item></item>
+    <item></item>
+    <item></item>
+  </string-array>
+  <string name="speak_book_changed">Raamatut on muudetud.</string>
+  <string name="speak_chapter_changed">Peatükk</string>
+  <string name="speak_first">Esimene</string>
+  <string name="speak_second">Teine</string>
+  <string name="speak_third">Kolmas</string>
+  <string name="speak_fourth">Neljas</string>
+  <string name="speak_fifth">Viies</string>
   <!--User Notes-->
   <string name="mynotes">Minu märkmed</string>
   <string name="mynote">Minu nimi</string>
@@ -243,6 +315,7 @@
   <string name="restore">Taasta</string>
   <string name="restore_confirmation">Kirjutada üle minu märkmed ja järjehoidjad?</string>
   <string name="restore_success">Märkmed ja järjehoidjad on taastatud SD-kaardilt: %s</string>
+  <string name="error_no_backup_file">Varukoopia faili ei leitud</string>
   <!--About-->
   <string name="about_copyright">Autoriõigused: %s</string>
   <string name="about_version">Versioon: %s</string>
@@ -270,7 +343,8 @@
   <string name="default_value">@string/lang_default</string>
   <string name="new_item">Uus</string>
   <string name="close">Sulge</string>
-  <string name="edit">uuda</string>
+  <string name="edit">Muuda</string>
+  <string name="watch_tutorial_video">Vaata videoõpetust (inglise keeles)</string>
   <!--Errors-->
   <string name="report_error">Saada veaaruanne</string>
   <string name="error_occurred">Tekkis viga</string>
@@ -278,5 +352,9 @@
   <string name="error_page_too_large">Lehekülg on laadimiseks liiga suur</string>
   <string name="error_key_not_in_document">Dokumendist ei leitud</string>
   <string name="empty_list">Pole ühtegi kirjet, mida näidata</string>
+  <string name="add_widget">Lisa vidin</string>
   <!--Notifications-->
+  <string name="download_documents">Dokumentide allalaadimine</string>
+  <string name="notification_channel_tts_status">Tekst kõneks</string>
+  <string name="notification_channel_progress_status">Edenemise teavitus näiteks dokumentide allalaadimisel jms.</string>
 </resources>
