--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1,10 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Bible</string>
-  <!--Startup & Help-->
-  <string name="splash_top_text">
-\"Akkor ezt mondta Isten: Legyen világosság! És lett világosság.\"\nI. Mózes 1:3</string>
-  <string name="help_text">A funkciók eléréséhez nyomd meg a MENÜ gombot\n\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn</string>
+  <!--Old long help text. This will be removed later.-->
   <string name="help_text_long"><b>Navigáció</b>\nTrackballal, D-paddal vagy ujjhúzással lapozhatsz az előző vagy következő fejezethez.
  \nA dupla koppintás be-/kikapcsolja a teljes képernyőt.
  \n\n<b>Menü</b>
@@ -17,6 +14,10 @@
  \n\n<b>Helyi menük</b> \nA Biblia-nézetben hosszú nyomásra megnyílik a helyi menü a vershez elérhető funkciókkal.
  \nA dokumentumkezelőben hosszan nyomva egy dokumentumot elérhetőek további információk és a törlési lehetőség
 \nA Vissza gomb hosszú nyomásával elérheted az előzményeket.</string>
+  <!--Startup & Help-->
+  <string name="splash_top_text">
+\"Akkor ezt mondta Isten: Legyen világosság! És lett világosság.\"\nI. Mózes 1:3</string>
+  <string name="help_text">A funkciók eléréséhez nyomd meg a MENÜ gombot\n\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn</string>
   <string name="version_text">Verzió: %s</string>
   <string name="no_sdcard_error">Helyezz be egy SD-kártyát és indítsd újra az And Bible-t.</string>
   <!--Main menu-->
