--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -1,10 +1,11 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Bible</string>
+  <!--Old long help text. This will be removed later.-->
+  <string name="help_text_long"><b>Navigacija</b>\nKeiskite skyrius naudodami ratuką, D-pad arba braukdami pirštu per ekraną. \nDvigubas ekrano palietimas įjungia ir išjungia viso ekrano veikseną.\n\n<b>MENIU </b>\nĮvairiems veiksmams atlikti spauskite Meniu mygtuką.\n\nNorėdami parsisiųsti daugiau dokumentų spauskite Meniu/Valdymas/Parsiųsti dokumentus \n\n<b>Mano pastabos</b>\nPastabas galima pridėti per „Mano pastabų“ meniu, kuris pasiekiamas iš Rašto eilutės kontekstinio meniu. Visų pastabų sąrašas pasiekiamas per pagrindinį meniu. \n\n<b>Klausymas</b>\nSpauskite „Klausyti“, norėdami pasiekti dialogą skaitymo pradėjimui ar sustabdymui.\n\n<b>Žymės</b>\nŽymės gali būti pridėtos per eilučių kontekstinį meniu. Žymių tvarkyklė pasiekiama per pagrindinį meniu. Žymių tvarkyklės kontekstinis meniu leidžia grupuoti žymes naudojant korteles.\n\n<b>Paieška</b>\nIeškomas tekstas gali turėti spacialius simbolius *, ?, AND, OR, NOT (norint išsamiau, žiūrėkite \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontekstinis meniu</b>\nNorėdami atverti kontekstinį meniu pasirinktai eilutei, palaikykite paspaudę ekraną pirštu. \nNorėdami gauti dokumento informaciją arba jį pašalinti, palaikykite paspaudę ant dokumento pirštu. \nNorėdami pasiekti atliktų veiksmų sąrašą, paspauskite ir palaikykite mygtuką „Atgal“.\n\n</string>
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Dievas tarė, „Teatsiranda šviesa!“ Ir atsirado šviesa.\"\nPradžios 1:3</string>
   <string name="help_text">Veiksmams atlikti spauskite MENIU mygtuką\n\nKeiskite skyrius naudodami ratuką, D-pad arba braukdami per ekraną pirštu.</string>
-  <string name="help_text_long"><b>Navigacija</b>\nKeiskite skyrius naudodami ratuką, D-pad arba braukdami pirštu per ekraną. \nDvigubas ekrano palietimas įjungia ir išjungia viso ekrano veikseną.\n\n<b>MENIU </b>\nĮvairiems veiksmams atlikti spauskite Meniu mygtuką.\n\nNorėdami parsisiųsti daugiau dokumentų spauskite Meniu/Valdymas/Parsiųsti dokumentus \n\n<b>Mano pastabos</b>\nPastabas galima pridėti per „Mano pastabų“ meniu, kuris pasiekiamas iš Rašto eilutės kontekstinio meniu. Visų pastabų sąrašas pasiekiamas per pagrindinį meniu. \n\n<b>Klausymas</b>\nSpauskite „Klausyti“, norėdami pasiekti dialogą skaitymo pradėjimui ar sustabdymui.\n\n<b>Žymės</b>\nŽymės gali būti pridėtos per eilučių kontekstinį meniu. Žymių tvarkyklė pasiekiama per pagrindinį meniu. Žymių tvarkyklės kontekstinis meniu leidžia grupuoti žymes naudojant korteles.\n\n<b>Paieška</b>\nIeškomas tekstas gali turėti spacialius simbolius *, ?, AND, OR, NOT (norint išsamiau, žiūrėkite \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontekstinis meniu</b>\nNorėdami atverti kontekstinį meniu pasirinktai eilutei, palaikykite paspaudę ekraną pirštu. \nNorėdami gauti dokumento informaciją arba jį pašalinti, palaikykite paspaudę ant dokumento pirštu. \nNorėdami pasiekti atliktų veiksmų sąrašą, paspauskite ir palaikykite mygtuką „Atgal“.\n\n</string>
   <string name="version_text">Versija %s</string>
   <string name="no_sdcard_error">Prašome įdėti SD kortelę ir iš naujo paleisti And Bible.</string>
   <!--Main menu-->
@@ -231,10 +232,8 @@
   <string name="speak_bookmarking_settings_title">Žymių nuostatos</string>
   <string name="speak_bookmarks_menu_title">Kalbėti nuo žymės</string>
   <string name="speak_advanced_settings">Papildomos nuostatos</string>
-  <string name="speak_settings_activity_title">Daugiau kalbos nuostatų</string>
   <string name="speak_sleep_timer_title">Miego laikrodis</string>
   <string name="speak_no_books_available">Nėra knygų, skirtų įgarsinimui</string>
-  <string name="conf_speak_synchronize">Sinchronizuoti tekstą su kalba</string>
   <string name="conf_speak_auto_bookmark">Automatinis žymėjimas</string>
   <string name="conf_save_playback_settings_to_bookmarks">Išsaugoti grojimo nuostatas žymėse</string>
   <string name="conf_replace_divinename">Pakeisti Dievo vardą į Jahvę</string>
@@ -242,7 +241,6 @@
   <string name="conf_change_title">Antraštei</string>
   <string name="conf_speak_footnotes">Išnašai</string>
   <string name="conf_speak_sleep_timer">Nustatyti miego laikrodį</string>
-  <string name="conf_speak_multitranslation">Lyginti vertimus įgarsinant visus atvirus langus</string>
   <string name="sleep_timer_title">Miegojimo laikas minutėmis</string>
   <string name="sleep_timer_set">Nustatyti miego laikrodį. Laikrodis nustatytas: %d minučių</string>
   <string name="sleep_timer_started">Miego laikas prasidėjo, %d minučių</string>
