--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,10 +1,11 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">Библия</string>
+  <!--Old long help text. This will be removed later.-->
+  <string name="help_text_long"><b>Навигация</b>\nДля того, чтобы перейти к следующей или предыдущей главе, прокрутите трэкбол или проведите пальцем по экрану вправо или влево. \nДля того, чтобы выключить/включить просмотр на весь экран щелкните пальцем по экрану два раза. \n\n<b>Меню</b> \nДля доступа к настройкам и функциям зайдите в Меню. \nДля того, чтобы скачать Библии и/или другие ресурсы нажмите Mеню/Еще/Скачать ресурсы. \n\n<b>Прослушивание вслух</b>\nДля того, чтобы начать или остановить прослушивание нажмите Mеню/Управление/Прослушать вслух . \n\n<b>Мои заметки</b>\nДля того, чтобы добавить заметки, зайдите в Мои заметки в контекстном меню стиха. Для того, чтобы просмотреть список существующих заметок зайдите в Меню/Мои заметки. \n\n<b>Закладки</b>\nДля того, чтобы добавить закладки, зайдите в контекстное меню стиха. Для того, чтобы просмотреть существующие закладки, зайдите в Меню/Закладки. В нём можно сгруппировать закладки через ярлыки.\n\n<b>Поиск</b>\nПоиск может содержать особые символы как *, ?, AND, OR, NOT (для более подробной информации см. \"Apache Lucene - Query Parser Syntax\")\n\n<b>Контестное меню</b>\nДля того, чтобы открыть контекстное меню стиха сделайте долгое нажатие по тексту Библии.\nДля того, чтобы удалить ресурс или посмотреть его источник сделайте долгое нажатие по ресурсу в разделе Ресурсы.\nДля того, чтобы просмотреть историю сделайте долгое нажатие на кнопку Назад</string>
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"И сказал Бог: \'Да будет свет.\' И стал свет. \"\nБытие 1:3</string>
   <string name="help_text">Для доступа к настройкам и функциям зайдите в Меню.\nДля того, чтобы перейти к следующей или предыдущей главе, прокрутите трэкбол или проведите пальцем по экрану вправо или влево.</string>
-  <string name="help_text_long"><b>Навигация</b>\nДля того, чтобы перейти к следующей или предыдущей главе, прокрутите трэкбол или проведите пальцем по экрану вправо или влево. \nДля того, чтобы выключить/включить просмотр на весь экран щелкните пальцем по экрану два раза. \n\n<b>Меню</b> \nДля доступа к настройкам и функциям зайдите в Меню. \nДля того, чтобы скачать Библии и/или другие ресурсы нажмите Mеню/Еще/Скачать ресурсы. \n\n<b>Прослушивание вслух</b>\nДля того, чтобы начать или остановить прослушивание нажмите Mеню/Управление/Прослушать вслух . \n\n<b>Мои заметки</b>\nДля того, чтобы добавить заметки, зайдите в Мои заметки в контекстном меню стиха. Для того, чтобы просмотреть список существующих заметок зайдите в Меню/Мои заметки. \n\n<b>Закладки</b>\nДля того, чтобы добавить закладки, зайдите в контекстное меню стиха. Для того, чтобы просмотреть существующие закладки, зайдите в Меню/Закладки. В нём можно сгруппировать закладки через ярлыки.\n\n<b>Поиск</b>\nПоиск может содержать особые символы как *, ?, AND, OR, NOT (для более подробной информации см. \"Apache Lucene - Query Parser Syntax\")\n\n<b>Контестное меню</b>\nДля того, чтобы открыть контекстное меню стиха сделайте долгое нажатие по тексту Библии.\nДля того, чтобы удалить ресурс или посмотреть его источник сделайте долгое нажатие по ресурсу в разделе Ресурсы.\nДля того, чтобы просмотреть историю сделайте долгое нажатие на кнопку Назад</string>
   <string name="version_text">Версия %s</string>
   <string name="no_sdcard_error">Вставьте SD карту и запустите Библию снова.</string>
   <!--Main menu-->
@@ -231,10 +232,8 @@
   <string name="speak_bookmarking_settings_title">Настройки создания закладок</string>
   <string name="speak_bookmarks_menu_title">Прослушать из закладки</string>
   <string name="speak_advanced_settings">Расширенные настройки</string>
-  <string name="speak_settings_activity_title">Больше настроек речи</string>
   <string name="speak_sleep_timer_title">Таймер сна</string>
   <string name="speak_no_books_available">Нет доступных книг для прослушивания</string>
-  <string name="conf_speak_synchronize">Синхронизация текста с речью</string>
   <string name="conf_speak_auto_bookmark">Автоматическое создание закладок</string>
   <string name="conf_save_playback_settings_to_bookmarks">Сохранять настройки воспроизведения в закладки</string>
   <string name="conf_replace_divinename">Заменять божественное имя на Яхве</string>
@@ -242,7 +241,6 @@
   <string name="conf_change_title">Подзаголовок</string>
   <string name="conf_speak_footnotes">Примечаний</string>
   <string name="conf_speak_sleep_timer">Установить таймер сна</string>
-  <string name="conf_speak_multitranslation">Сравнить переводы, прослушивая из всех видимых окон</string>
   <string name="sleep_timer_title">Время сна в минутах</string>
   <string name="sleep_timer_set">Установить таймер сна. Таймер установлен: %dминут</string>
   <string name="sleep_timer_started">Таймер сна запущен, %d минут</string>
