--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -1,9 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Bible</string>
-  <!--Startup & Help-->
-  <string name="splash_top_text">\n\"Mungu akasema, Iwe nuru; ikawa nuru.\"\nMwanzo 1:3</string>
-  <string name="help_text">Bonyeza menyu kwa vitendo\n\nHamia kwenye mlango ufuatao ama utanguliao kwa kubebesha kidole chako kwenye skrini</string>
+  <!--Old long help text. This will be removed later.-->
   <string name="help_text_long"><b>Kuabiri</b>\nHamia kwenye mlango ufuatao ama utanguliao kwa kubebesha kidole chako kwenye skrini
     \nBonyeza mara mbili kuwasha na kuzima skrini nzima.
     \n\n<b>Menyu</b>
@@ -18,6 +16,9 @@
     \nBonyeza kwa muda kwenye makala ndani ya orodha ya makala ili kuifuta ama kuangalia taarifa zake.
     \nBonyeza kwa muda kitufe cha kurudi nyuma kwa ajili ya kufikia orodha ya historia uvinjari.
     </string>
+  <!--Startup & Help-->
+  <string name="splash_top_text">\n\"Mungu akasema, Iwe nuru; ikawa nuru.\"\nMwanzo 1:3</string>
+  <string name="help_text">Bonyeza menyu kwa vitendo\n\nHamia kwenye mlango ufuatao ama utanguliao kwa kubebesha kidole chako kwenye skrini</string>
   <string name="version_text">Toleo %s</string>
   <string name="no_sdcard_error">Tafadhali ingiza SD Kadi ukawashe And Bible tena.</string>
   <!--Main menu-->
