--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,10 +1,11 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And 圣经</string>
+  <!--Old long help text. This will be removed later.-->
+  <string name="help_text_long"><b>导航</b>\n到前一章或者后一章： 使用轨迹球，D-pad或用手指在屏幕上左右滑动\n全屏模式打开或关闭： 双击屏幕\n\n<b>菜单</b>\n按MENU菜单键来开启动作菜单\n\n欲下载更多的圣经或者文档， 按 菜单／更多／下载文档\n\n<b>朗读</b>\n按朗读启动开关朗读功能的对话框\n\n<b>我的笔记</b>\n按弹出菜单中的我的笔记菜单项可以添加笔记。现有笔记列表通过主菜单访问\n\n<b>书签</b>\n在弹出菜单中可以给对应小节添加书签。 书签管理通过主菜单访问。 书签管理的弹出菜单提供书签分组功能，而且可以使用标签。\n\n<b>查询</b>\n查询文本可以包括的特殊字符有 *，?，AND，OR，NOT (请参考 \"Apache Lucene - Query Parser Syntax\" 获得更多的信息)\n\n<b>弹出菜单</b>\n长按圣经文本显示针对当前小节的有效动作菜单\n长按文档选择列表中某项来删除文档或者查看文档的信息\n长按BACK返回按钮查看历史记录</string>
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"神說：「要有光」，就有了光\"\n创世记 1:3</string>
   <string name="help_text">导航:\n使用MENU菜单的按钮操作\n向左滑动手指看下一章\n向右滑动手指看上一章\n向左或向右按轨迹球\n也可以前后翻动章节</string>
-  <string name="help_text_long"><b>导航</b>\n到前一章或者后一章： 使用轨迹球，D-pad或用手指在屏幕上左右滑动\n全屏模式打开或关闭： 双击屏幕\n\n<b>菜单</b>\n按MENU菜单键来开启动作菜单\n\n欲下载更多的圣经或者文档， 按 菜单／更多／下载文档\n\n<b>朗读</b>\n按朗读启动开关朗读功能的对话框\n\n<b>我的笔记</b>\n按弹出菜单中的我的笔记菜单项可以添加笔记。现有笔记列表通过主菜单访问\n\n<b>书签</b>\n在弹出菜单中可以给对应小节添加书签。 书签管理通过主菜单访问。 书签管理的弹出菜单提供书签分组功能，而且可以使用标签。\n\n<b>查询</b>\n查询文本可以包括的特殊字符有 *，?，AND，OR，NOT (请参考 \"Apache Lucene - Query Parser Syntax\" 获得更多的信息)\n\n<b>弹出菜单</b>\n长按圣经文本显示针对当前小节的有效动作菜单\n长按文档选择列表中某项来删除文档或者查看文档的信息\n长按BACK返回按钮查看历史记录</string>
   <string name="version_text"> %s 版本 </string>
   <string name="no_sdcard_error">请插入并装载SD存储卡，然后再次启动本程序</string>
   <!--Main menu-->
